# mts_shad_fastapi_project

./: .env  .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  gen_salt.py  gen_secret_key.py  main.py  notes.txt  pyproject.toml  test.http
configurations/: database.py
docker/postgres/: Dockerfile  create_databases.sql
routers/v1/: books.py
src/: __init__.py  main.py  pytest.ini
src/configurations/: __init__.py  database.py  security.py  settings.py
src/dao/: __init__.py  base.py  book.py  seller.py
src/lib/: auth.py
src/models/: base.py  books.py  seller.py  sellers.py  tables.py
src/routers/: __init__.py  dependencies.py  dependency_stubs.py
src/routers/v1/: books.py  seller.py  sellers.py  token.py
src/schemas/: __init__.py  auth.py  books.py  seller.py  sellers.py  token.py
src/tests/: conftest.py  test_books.py  test_books_unittest_example.py  test_books_with_pytest.py  test_seller.py  test_sellers.py  test_sellers_with_pytest.py  test_token.py
